// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewContainer render renders spinner when stores not ready 1`] = `
<StyledSpinnerBase
  className="details-view-spinner"
  label="Loading..."
  size={3}
/>
`;

exports[`DetailsViewContainer renderContent renders TargetPageClosedView when target page closed 1`] = `
"<Fragment>
  <InteractiveHeader deps={{...}} selectedPivot={{...}} featureFlagStoreData={{...}} tabClosed={true} />
  <NoContentAvailable />
</Fragment>"
`;

exports[`DetailsViewContainer renderContent shows target tab was closed when stores are not loaded 1`] = `
"<Fragment>
  <InteractiveHeader deps={{...}} selectedPivot={0} featureFlagStoreData={{...}} tabClosed={true} />
  <NoContentAvailable />
</Fragment>"
`;
